fixed footer issue. solved flex layout problems

--- a/styles/scss/_global.scss
+++ b/styles/scss/_global.scss
@@ -15,13 +15,6 @@ html {
 }
 
 
-footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background: $section-bg;
-    color: $text-light;
-}
 
 ul{
     display: flex;
