--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -1,6 +1,7 @@
 main{
     display: flex;
-    .quickRoll{
+    min-height:calc(100vh - 30px);
+        .quickRoll{
         width: calc(40% - 40px);
         margin:20px;
         border: 4px solid $primary;
@@ -64,6 +65,8 @@ main{
 }
 
 .insertRollContainer{
+    overflow: auto;
+    max-height: 30vh;
     li{
         list-style: none;
         font-size: 1.5rem;
