--- a/styles/style.css
+++ b/styles/style.css
@@ -249,14 +249,6 @@ html {
   font-size: 1rem;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  background: #050a05;
-  color: #d1d1d1;
-}
-
 ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -290,10 +282,19 @@ header h1 {
   padding: 20px;
 }
 
+footer {
+  width: 100%;
+  background: #050a05;
+  color: #d1d1d1;
+  margin: 0%;
+  padding: 5px;
+}
+
 main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-height: calc(100vh - 30px);
 }
 
 main .quickRoll {
@@ -356,6 +357,11 @@ main .multiRoll button:hover {
   padding: 5px;
   border-radius: 15px;
   margin: 5px;
+}
+
+.insertRollContainer {
+  overflow: auto;
+  max-height: 30vh;
 }
 
 .insertRollContainer li {
